Ozhaev Zaynudin cartoon.cpp.g++log.txt
In file included from C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp:12:0:
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Family.h: In function 'void DrawFamily()':
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Family.h:2:6: warning: no previous declaration for 'void DrawFamily()' [-Wmissing-declarations]
 void DrawFamily ()
      ^
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Family.h:213:5: error: expected ',' or ';' before 'while'
     while ( n <= 5 )
     ^
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Family.h:212:9: warning: unused variable 'n' [-Wunused-variable]
     int n = 0
         ^
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp:356:5: error: expected '}' at end of input
     }
     ^
---------------------------------------------------------------------------------------------
[06.05.2021 15:52:59,04 C:\Users\zainu@DESKTOP-ZAINU, returned 1]
C:\Users\zainu\Desktop\курс\1proekt\1proekt> g++.exe "C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp" -o "C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.exe"  -Wshadow -Winit-self -Wredundant-decls -Wcast-align -Wundef -Wfloat-equal -Winline -Wunreachable-code -Wmissing-declarations -Wmissing-include-dirs -Wswitch-enum -Wswitch-default -Weffc++ -Wmain -Wextra -Wall -g -pipe -fexceptions -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wempty-body -Wformat-security -Wformat=2 -Wignored-qualifiers -Wlogical-op -Wmissing-field-initializers -Wnon-virtual-dtor -Woverloaded-virtual -Wpointer-arith -Wsign-promo -Wstack-usage=8192 -Wstrict-aliasing -Wstrict-null-sentinel -Wtype-limits -Wwrite-strings -D_DEBUG -D_EJUDGE_CLIENT_SIDE -D_EJC
